[build-system]
requires = ["uv_build>=0.8.11"]
build-backend = "uv_build"

[project]
name = "fms-proxy"
version = "0.1.0"
description = "A proxy for outlook ICS files because MS are really annoying."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


# RUFF settings
[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = [
    "C",  # mccabe rules
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]
ignore = [
    # "C901",  # max-complexity-10
    "E501",  # line-too-long
]

# Rumdl settings
# This is a tool for formatting markdown files, it can be used to fix issues automatically.
[tool.rumdl]
line-length = 100
